# msgpack-types

./: .gitignore  README.md  pyproject.toml
msgpack-stubs/: __init__.pyi  _cmsgpack.pyi  _version.pyi  exceptions.pyi  ext.pyi  fallback.pyi
