[tool.poetry]
name = "msgpack-types"
version = "0.5.0"
description = "Type stubs for msgpack"
repository = "https://github.com/sbdchd/msgpack-types"
readme = "README.md"
authors = ["Steve Dignam <steve@dignam.xyz>"]
license = "Apache-2.0"
keywords = ["msgpack", "types", "mypy", "stubs"]
packages = [
  { include = "msgpack-stubs" },
]


[tool.poetry.dependencies]
python = "^3.8"
msgpack = ">=1.1.0,<1.2.0"
typing-extensions = '>=4.6.0'

[tool.poetry.dev-dependencies]
mypy = "^0.790.0"
ipython = "^7.19"
flake8 = "^3.8"
isort = "^5.6"
black = {version = "^18.3-alpha.0",allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
